force-app/main/default/objects/Contact/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Usuário Completo</fullName>
                <label>Full Access</label>
            </value>
            <value>
                <fullName>Usuário Restrito</fullName>
                <label>Restrict Access</label>
            </value>
            <value>
                <fullName>Usuário Visualização</fullName>
                <label>Read Only</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>