force-app/main/default/objects/Contact/fields/Channel_URL__c.field-meta.xml
<CustomField>
    <fullName>Channel_URL__c</fullName>
    <label>Channel URL</label>
    <type>Url</type>
</CustomField>