force-app/main/default/objects/Contact/fields/KYC_Fiscal_Code__c.field-meta.xml
<CustomField>
    <fullName>KYC_Fiscal_Code__c</fullName>
    <label>KYC Fiscal Code</label>
    <type>TextArea</type>
</CustomField>