force-app/main/default/objects/Contact/fields/KYC_Role__c.field-meta.xml
<CustomField>
    <fullName>KYC_Role__c</fullName>
    <label>KYC Role</label>
    <type>TextArea</type>
</CustomField>