force-app/main/default/objects/Contact/fields/Lead_Area__c.field-meta.xml
<CustomField>
    <fullName>Lead_Area__c</fullName>
    <label>Área do lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lead_Area</valueSetName>
    </valueSet>
</CustomField>