force-app/main/default/objects/Contact/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Contatos</relationshipLabel>
    <relationshipName>Contatos</relationshipName>
    <type>Lookup</type>
</CustomField>