force-app/main/default/objects/Contact/fields/Related_KYC__c.field-meta.xml
<CustomField>
    <fullName>Related_KYC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related KYC</label>
    <referenceTo>KYC__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>KYC_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>