force-app/main/default/objects/Contact/fields/Related_KYC_XB__c.field-meta.xml
<CustomField>
    <fullName>Related_KYC_XB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related KYC XB</label>
    <referenceTo>KYC_XB__c</referenceTo>
    <relationshipLabel>KYC XB Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>