force-app/main/default/objects/Contact/fields/RG__c.field-meta.xml
<CustomField>
    <fullName>RG__c</fullName>
    <label>RG</label>
    <type>TextArea</type>
</CustomField>