force-app/main/default/objects/Contact/fields/Same_Address_As__c.field-meta.xml
<CustomField>
    <fullName>Same_Address_As__c</fullName>
    <label>Same Address As</label>
    <type>TextArea</type>
</CustomField>