force-app/main/default/objects/Contact/fields/Skype_ID__c.field-meta.xml
<CustomField>
    <fullName>Skype_ID__c</fullName>
    <label>Skype ID</label>
    <length>140</length>
    <type>Text</type>
</CustomField>