force-app/main/default/objects/Contact/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Principal</fullName>
                <default>true</default>
                <label>Principal</label>
            </value>
            <value>
                <fullName>Técnico</fullName>
            </value>
            <value>
                <fullName>Reembolsos</fullName>
            </value>
            <value>
                <fullName>Notificação</fullName>
            </value>
            <value>
                <fullName>Financeiro</fullName>
            </value>
            <value>
                <fullName>Representante Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>